--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "intersectjs",
   "version": "1.0.0",
   "description": "The Intersect Engine API Client Library.",
-  "main": "client.mjs",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,8 +24,8 @@
     "lib": "lib"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
     "typescript": "^4.8.4"
   }
