--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "intersectjs",
+  "name": "intersectts",
   "version": "1.0.0",
-  "description": "The Intersect Engine API Client Library.",
-  "main": "index.ts",
+  "description": "The Intersect Engine API Client Library based on TS.",
+  "main": "client.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "yarn compile && node ./dist/index.js",
-    "compile": "tsc -p ./tsconfig.json"
+    "build": "tsc --build --clean && tsc --build && node ./dist/test.js"
   },
   "keywords": [
     "Intersect",
@@ -19,14 +17,13 @@
     "NodeJS"
   ],
   "author": "AriusII",
-  "license": "ISC",
+  "license": "MIT",
   "directories": {
     "lib": "lib"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
-    "eslint": "^8.24.0",
-    "typescript": "^4.8.4"
+    "eslint": "^8.24.0"
   }
 }
